tests/tests_e3_aws/troposphere/ec2/vpc_v2.json
{
    "TestVPCInternetGW": {
        "Type": "AWS::EC2::InternetGateway"
    },
    "TestVPCInternetGWAttachment": {
        "Properties": {
            "InternetGatewayId": {
                "Ref": "TestVPCInternetGW"
            },
            "VpcId": {
                "Ref": "TestVPCVPC"
            }
        },
        "Type": "AWS::EC2::VPCGatewayAttachment"
    },
    "TestVPCPublicRouteTable": {
        "Properties": {
            "VpcId": {
                "Ref": "TestVPCVPC"
            }
        },
        "Type": "AWS::EC2::RouteTable"
    },
    "TestVPCPublicRouteToInternet": {
        "Properties": {
            "RouteTableId": {
                "Ref": "TestVPCPublicRouteTable"
            },
            "DestinationCidrBlock": "0.0.0.0/0",
            "GatewayId": {
                "Ref": "TestVPCInternetGW"
            }
        },
        "Type": "AWS::EC2::Route"
    },
    "TestVPCPrivateSubnetA": {
        "Properties": {
            "VpcId": {
                "Ref": "TestVPCVPC"
            },
            "CidrBlock": "10.10.0.0/19",
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "TestVPCPrivateSubnetA"
                }
            ],
            "AvailabilityZone": "eu-west-1a"
        },
        "Type": "AWS::EC2::Subnet"
    },
    "TestVPCPrivateSubnetB": {
        "Properties": {
            "VpcId": {
                "Ref": "TestVPCVPC"
            },
            "CidrBlock": "10.10.32.0/19",
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "TestVPCPrivateSubnetB"
                }
            ],
            "AvailabilityZone": "eu-west-1b"
        },
        "Type": "AWS::EC2::Subnet"
    },
    "TestVPCPublicSubnetA": {
        "Properties": {
            "VpcId": {
                "Ref": "TestVPCVPC"
            },
            "CidrBlock": "10.10.64.0/19",
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "TestVPCPublicSubnetA"
                }
            ],
            "AvailabilityZone": "eu-west-1a"
        },
        "Type": "AWS::EC2::Subnet"
    },
    "TestVPCPublicSubnetB": {
        "Properties": {
            "VpcId": {
                "Ref": "TestVPCVPC"
            },
            "CidrBlock": "10.10.96.0/19",
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "TestVPCPublicSubnetB"
                }
            ],
            "AvailabilityZone": "eu-west-1b"
        },
        "Type": "AWS::EC2::Subnet"
    },
    "TestVPCEIPA": {
        "Type": "AWS::EC2::EIP"
    },
    "TestVPCEIPB": {
        "Type": "AWS::EC2::EIP"
    },
    "TestVPCNatGatewayA": {
        "Properties": {
            "AllocationId": {
                "Fn::GetAtt": [
                    "TestVPCEIPA",
                    "AllocationId"
                ]
            },
            "SubnetId": {
                "Ref": "TestVPCPublicSubnetA"
            }
        },
        "Type": "AWS::EC2::NatGateway"
    },
    "TestVPCNatGatewayB": {
        "Properties": {
            "AllocationId": {
                "Fn::GetAtt": [
                    "TestVPCEIPB",
                    "AllocationId"
                ]
            },
            "SubnetId": {
                "Ref": "TestVPCPublicSubnetB"
            }
        },
        "Type": "AWS::EC2::NatGateway"
    },
    "TestVPCPrivateRouteTableA": {
        "Properties": {
            "VpcId": {
                "Ref": "TestVPCVPC"
            }
        },
        "Type": "AWS::EC2::RouteTable"
    },
    "TestVPCPrivateRouteTableB": {
        "Properties": {
            "VpcId": {
                "Ref": "TestVPCVPC"
            }
        },
        "Type": "AWS::EC2::RouteTable"
    },
    "TestVPCPrivateRouteAToInternet": {
        "Properties": {
            "RouteTableId": {
                "Ref": "TestVPCPrivateRouteTableA"
            },
            "DestinationCidrBlock": "0.0.0.0/0",
            "NatGatewayId": {
                "Ref": "TestVPCNatGatewayA"
            }
        },
        "Type": "AWS::EC2::Route"
    },
    "TestVPCPrivateRouteBToInternet": {
        "Properties": {
            "RouteTableId": {
                "Ref": "TestVPCPrivateRouteTableB"
            },
            "DestinationCidrBlock": "0.0.0.0/0",
            "NatGatewayId": {
                "Ref": "TestVPCNatGatewayB"
            }
        },
        "Type": "AWS::EC2::Route"
    },
    "TestVPCPrivateRouteTableAssocA": {
        "Properties": {
            "RouteTableId": {
                "Ref": "TestVPCPrivateRouteTableA"
            },
            "SubnetId": {
                "Ref": "TestVPCPrivateSubnetA"
            }
        },
        "Type": "AWS::EC2::SubnetRouteTableAssociation"
    },
    "TestVPCPrivateRouteTableAssocB": {
        "Properties": {
            "RouteTableId": {
                "Ref": "TestVPCPrivateRouteTableB"
            },
            "SubnetId": {
                "Ref": "TestVPCPrivateSubnetB"
            }
        },
        "Type": "AWS::EC2::SubnetRouteTableAssociation"
    },
    "TestVPCPublicRouteTableAssocA": {
        "Properties": {
            "RouteTableId": {
                "Ref": "TestVPCPublicRouteTable"
            },
            "SubnetId": {
                "Ref": "TestVPCPublicSubnetA"
            }
        },
        "Type": "AWS::EC2::SubnetRouteTableAssociation"
    },
    "TestVPCPublicRouteTableAssocB": {
        "Properties": {
            "RouteTableId": {
                "Ref": "TestVPCPublicRouteTable"
            },
            "SubnetId": {
                "Ref": "TestVPCPublicSubnetB"
            }
        },
        "Type": "AWS::EC2::SubnetRouteTableAssociation"
    },
    "TestVPCVPC": {
        "Properties": {
            "CidrBlock": "10.10.0.0/16",
            "EnableDnsHostnames": true,
            "EnableDnsSupport": true,
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "TestVPCVPC"
                }
            ]
        },
        "Type": "AWS::EC2::VPC"
    }
}
